welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:27: error: not found: value faireV
	faireV()
        ^