welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
def faireV() {
var i = 0
avance()
baisseBrosse()
gauche()
leveBrosse()
avance()
droite()
avance()
baisseBrosse()
leveBrosse()
avance()
droite()
avance()
baisseBrosse()
leveBrosse()
gauche()
avance()
gauche()

}
}

for (i <- 1 to 8) {
	faireV()
}
